# app/Http/Resources/BankTransactionResource.php
@@ -9,34 +9,34 @@ use function App\Helpers\formatCurrency;
 use OpenApi\Attributes as OA;
 
 #[OA\Schema(
-    title: "Transação Bancária",
+    title: "Bank Transaction",
     type: "object",
-    required: ["recebedorId", "pagadorId", "formaPagamento", "valor"],
+    required: ["receiverId", "payerId", "paymentMethod", "value"],
     properties: [
         new OA\Property(
-            property:"recebedorId",
+            property:"receiverId",
             title:"ID da conta do recebedor",
-            type:"integer"
+            type:"string"
         ),
         new OA\Property(
-            property:"pagadorId",
+            property:"payerId",
             title:"ID da conta do pagador",
-            type:"integer"
+            type:"string"
         ),
         new OA\Property(
-            property:"formaPagamento",
-            title:"Meio que o pagamento foi realizado.",
+            property:"paymentMethod",
+            title:"Meio que o pagamento será realizado.",
             type:"string",
             description: "Formas de pagamento aceitas: 'C' (Crédito), 'D' (Débito) e 'P' (Pix)"
         ),
         new OA\Property(
-            property:"valor",
-            title:"valor",
+            property:"value",
+            title:"Valor da transação",
             type:"number"
         )
     ]
 )]
-class TransacaoBancariaResource extends JsonResource
+class BankTransactionResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -46,11 +46,11 @@ class TransacaoBancariaResource extends JsonResource
     public function toArray(Request $request): array
     {
         return [
-            'recebedorId' => $this->recebedorId,
-            'pagadorId' => $this->pagadorId,
-            'formaPagamento' => $this->formaPagamento,
-            'valor' => formatCurrency($this->valor),
-            'realizadaEm' => $this->createdAt
+            'receiverId' => $this->receiverId,
+            'payerId' => $this->payerId,
+            'paymentMethod' => $this->paymentMethod,
+            'value' => formatCurrency($this->value),
+            'date' => $this->createdAt
         ];
     }
 }
